baseline-java-versions: `javaCompiler` property to compile Java code with a certain JDK version (#3342)
baseline-java-versions: Introduce an optional javaCompiler property to javaVersions which will determine which JDK is used to run the Java compiler. In this mode, --release is now used to target lower Java language versions/class file bytecode than the compiler.